Corrijo error de sintaxis y encoding de lectura
Reemplazo eana1 por eana.
Agrego encoding='utf8' para la lectura de los datos geográficos de las provincias.

--- a/eana_animacion.ipynb
+++ b/eana_animacion.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "#Carga de datos\n",
-    "eana = pd.read_csv('./input/eana1.csv',sep=';',encoding='latin1')\n",
+    "eana = pd.read_csv('./input/eana.csv',sep=';',encoding='latin1')\n",
     "airports = pd.read_csv('./input/airports.csv', encoding='utf8')\n",
     "provincias = pd.read_csv('./input/region_provincia.csv',encoding='utf8')\n",
     "\n",
@@ -313,7 +313,7 @@
     "# mundo[mundo.iso_a3=='ARG'].plot(ax=ax_arg); \n",
     "# Uso el mapa de mundo para pruebas porque es más liviano\n",
     "# IMPORTANTE! Para el video usar ESTE: \n",
-    "argentina = gpd.read_file('./input/provincia')\n",
+    "argentina = gpd.read_file('./input/provincia', encoding='utf8')\n",
     "argentina.plot(ax=ax_arg);\n",
     "\n",
     "point, = ax_arg.plot([], [], '.', color='red', markersize=15)\n",
